refactor: HTTP 요청 객체 개선
- 의미있는 범위로 객체화
- 테스트 코드 추가